fixed table spacing

--- a/lesson-5/css/small.css
+++ b/lesson-5/css/small.css
@@ -120,12 +120,16 @@ h2.a{
     display:none;
     margin-bottom:2px;
 }
+table{
+    border-spacing:0;
+    border-collapse:collapse;
+}
 
 table.b {
     display:none;
     table-layout: auto;
     width:500px;
-    border-spacing:collapse;
+    
     
 }
 
